--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
         
             <h3 class="program-dancer">STYLE PIONEERS</h3>
             <div class="program-dancer-list">
-                <div class="program-dancer-list-item">
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">NAME : HIMCHAN</h3>
-                    <h4 class="dancer-skill">MAIN SKILL : URBAN</h4>
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">NAME : HIMCHAN</h3>
-                    <h4 class="dancer-skill">MAIN SKILL : URBAN</h4>
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">NAME : HIMCHAN</h3>
-                    <h4 class="dancer-skill">MAIN SKILL : URBAN</h4>
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">NAME : HIMCHAN</h3>
-                    <h4 class="dancer-skill">MAIN SKILL : URBAN</h4>
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">NAME : HIMCHAN</h3>
-                    <h4 class="dancer-skill">MAIN SKILL : URBAN</h4>
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">NAME : HIMCHAN</h3>
-                    <h4 class="dancer-skill">MAIN SKILL : URBAN</h4>
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
             </div>
         </div>
