--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
 <body>
     <nav class="nav-bar">
-        <h1 class="logo"><img class="logo-img" src="./img/logo.svg" alt="HIMCHAN Dance"></h1>
+        <h1 class="logo"><img class="logo-img" src="./img/logo.png" alt="HIMCHAN Dance"></h1>
 
         <div class="container-hambuger" onclick="myFunction(this)">
             <div class="bar1"></div>
