--- a/index.html
+++ b/index.html
@@ -43,41 +43,67 @@
         </div>
 
         <div class="program">
-            <h2 class="program-ment">Designed With The Best</h2>
-            <p class=program-title>Every class and program is thoughtfully designed by dance style pioneers and sought after choreographers.</p>
+            <!-- <h2 class="program-ment">Designed With The Best</h2>
+            <p class=program-title>Every class and program is thoughtfully designed by dance style pioneers and sought after choreographers.</p> -->
         
-            <h3 class="program-dancer">STYLE PIONEERS</h3>
+            <h3 class="program-dancer">PRODUCER</h3>
             <div class="program-dancer-list">
                 <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
                     <h3 class="dancer-name">HIMCHAN</h3>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
-                <div class="program-dancer-list-item">
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
                     <h3 class="dancer-name">HIMCHAN</h3>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
-                <div class="program-dancer-list-item">
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
                     <h3 class="dancer-name">HIMCHAN</h3>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
-                <div class="program-dancer-list-item">
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
                     <h3 class="dancer-name">HIMCHAN</h3>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
-                <div class="program-dancer-list-item">
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
                     <h3 class="dancer-name">HIMCHAN</h3>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
-                <div class="program-dancer-list-item">
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
                     <h3 class="dancer-name">HIMCHAN</h3>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
+                    <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
+                </div>
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
+                    <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
+                </div>
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
+                    <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
+                </div>
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
+                    <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
+                </div>
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
+                    <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
+                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
+                </div>
+                
             </div>
         </div>
 
