--- a/media_List.html
+++ b/media_List.html
@@ -9,6 +9,10 @@
         function myFunction(x) {
           x.classList.toggle("change");
         }
+
+        function videoPlay() {
+            location.href ='./media_List.html
+        }
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -51,10 +55,10 @@
         </div>
     </nav>
 
-    <h2 class="user_media_title">HIMCHAN's Program</h2>
+    <h2 class="user_media_title">조힘찬님의 강좌</h2>
 
     <div class="media-list">
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="location.href ='./video_page.html'"">
             <img src="./img/1.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -75,8 +79,9 @@
                 </p>
                 <div class="Best-Content">THE BEST</div>
             </div>
+            <video src="./media/testmedia.mp4" style="display: none;" id="video"></video>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/2.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -98,7 +103,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/3.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -120,7 +125,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/4.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -142,7 +147,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/5.jpg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -164,7 +169,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/1.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -186,7 +191,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/3.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -208,7 +213,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/4.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -230,7 +235,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/2.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -252,7 +257,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/5.jpg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -274,7 +279,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item">
+        <div class="media-list-item" onclick="videoPlay()">
             <img src="./img/1.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
