--- a/video_page.html
+++ b/video_page.html
@@ -40,6 +40,6 @@
     </style>
 </head>
 <body>
-    <video id="video" src="./media/testmedia.mp4" onclick="videoPlay()"></video>
+    <video id="video" src="./media/testmedia.mp4" controls="true" onclick="videoPlay()"></video>
 </body>
 </html>
