--- a/media_List.html
+++ b/media_List.html
@@ -81,7 +81,7 @@
             </div>
             <video src="./media/testmedia.mp4" style="display: none;" id="video"></video>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item"  onclick="location.href ='./video_page.html'"">
             <img src="./img/2.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -103,7 +103,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item"  onclick="location.href ='./video_page.html'"">
             <img src="./img/3.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -125,7 +125,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item"  onclick="location.href ='./video_page.html'"">
             <img src="./img/4.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -147,7 +147,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item" onclick="location.href ='./video_page.html'"">
             <img src="./img/5.jpg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -169,7 +169,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item" onclick="location.href ='./video_page.html'"">
             <img src="./img/1.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -191,7 +191,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item" onclick="location.href ='./video_page.html'"">
             <img src="./img/3.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -213,7 +213,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item" onclick="location.href ='./video_page.html'"">
             <img src="./img/4.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -235,7 +235,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item" onclick="location.href ='./video_page.html'"">
             <img src="./img/2.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -257,7 +257,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item" onclick="location.href ='./video_page.html'"">
             <img src="./img/5.jpg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
@@ -279,7 +279,7 @@
                 <div class="Best-Content">THE BEST</div>
             </div>
         </div>
-        <div class="media-list-item" onclick="videoPlay()">
+        <div class="media-list-item" onclick="location.href ='./video_page.html'"">
             <img src="./img/1.jpeg" alt="" class="media-item-thumnail">
             <div class="media-content">
                 <h3 class="media-title">Basic Dance Moves for Guys</h3>
