--- a/index.html
+++ b/index.html
@@ -49,61 +49,65 @@
             <h3 class="program-dancer">PRODUCER</h3>
             <div class="program-dancer-list">
                 <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
+                    <img class="dancer-img" src="./img/profile_1.jpg" alt="">
+                    <h3 class="dancer-name">조힘찬</h3>
+                    <h4 class="dancer-info">경기/26세</h4>
+                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
+                </div>
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
+                    <img class="dancer-img" src="./img/profile_2.jpg" alt="">
+                    <h3 class="dancer-name">원종혁</h3>
+                    <h4 class="dancer-info">경기 / 26세</h4>
+                    <h4 class="dancer-skill">SMILE :)</h4>
+                </div>
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
+                    <img class="dancer-img" src="./img/profile_3.jpg" alt="">
+                    <h3 class="dancer-name">이승민</h3>
+                    <h4 class="dancer-info">로스앤젤레스 / 26세</h4>
+                    <h4 class="dancer-skill">PROGRAMMING, FACE, ALL</h4>
+                </div>
+                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h3 class="dancer-name">홍길동</h3>
+                    <h4 class="dancer-info">서울/30세</h4>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h3 class="dancer-name">홍길동</h3>
+                    <h4 class="dancer-info">인천/23세</h4>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h3 class="dancer-name">홍길동</h3>
+                    <h4 class="dancer-info">경북/32세</h4>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h3 class="dancer-name">홍길동</h3>
+                    <h4 class="dancer-info">부산/29세</h4>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h3 class="dancer-name">홍길동</h3>
+                    <h4 class="dancer-info">서울/30세</h4>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h3 class="dancer-name">홍길동</h3>
+                    <h4 class="dancer-info">서울/30세</h4>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
                 <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
                     <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
+                    <h3 class="dancer-name">홍길동</h3>
+                    <h4 class="dancer-info">서울/30세</h4>
                     <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
                 </div>
-                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
-                    <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
-                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
-                </div>
-                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
-                    <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
-                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
-                </div>
-                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
-                    <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
-                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
-                </div>
-                <div class="program-dancer-list-item" onclick="location.href ='./media_List.html'">
-                    <img class="dancer-img" src="./img/dancer_profile.jpg" alt="">
-                    <h3 class="dancer-name">HIMCHAN</h3>
-                    <h4 class="dancer-skill">URBAN, STREET, MEDIA</h4>
-                </div>
-                
             </div>
         </div>
 
