--- a/video_page.html
+++ b/video_page.html
@@ -16,10 +16,10 @@
     </style>
 </head>
 <body>
-    <video class="main-video" id="video" src="./media/testmedia.mp4" controls="true" onclick="videoPlay()"></video>
+    <video class="main-video" id="video" src="./media/testmedia.mp4" controls="true" onclick="videoPlay()" autoplay="autoplay" muted="autoplay"></video>
     <div class="v-list">
         <div class="v-items">
-            <video src="./media/testmedia.mp4" class="v-item"></video>
+            <video src="./media/testmedia.mp4" class="v-item" autoplay muted="autoplay"></video>
             <h5 class="v-item-title">Leb 01 Lorem ipsum dolor sit.</h5>
         </div>
         <div class="v-items">
