--- a/video_page.html
+++ b/video_page.html
@@ -8,7 +8,7 @@
     <script>
         function videoPlay(){
            var video = document.getElementById('video')
-           video.requestFullscreen()
+           video.play()
         }
     </script>
     <style>
