--- a/video_page.html
+++ b/video_page.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./video_page.css">
-    <script>
+    <!-- <script>
         function videoPlay(){
            var video = document.getElementById('video')
         }
-    </script>
+    </script> -->
     <style>
         
     </style>
 </head>
 <body>
-    <video class="main-video" id="video" src="./media/testmedia.mp4" controls="true" onclick="videoPlay()" autoplay="autoplay" muted="autoplay"></video>
+    <video class="main-video" id="video" src="./media/testmedia.mp4" autoplay="autoplay" muted="autoplay" controls></video>
     <div class="v-list">
         <div class="v-items">
             <video src="./media/testmedia.mp4" class="v-item"></video>
