--- a/video_page.html
+++ b/video_page.html
@@ -18,7 +18,7 @@
     <video class="main-video" id="video" src="./media/testmedia.mp4" autoplay="autoplay" muted="autoplay" controls></video>
     <div class="v-list">
         <div class="v-items">
-            <video src="./media/testmedia.mp4" class="v-item"></video>
+            <img src="./img/1.jpeg" class="v-item"></img>
             <h5 class="v-item-title">Leb 01 Lorem ipsum dolor sit.</h5>
         </div>
         <div class="v-items">
