--- a/video_page.html
+++ b/video_page.html
@@ -15,7 +15,8 @@
     </style>
 </head>
 <body>
-    <video class="main-video" id="video" src="./media/testmedia.mp4" autoplay="autoplay" muted="autoplay" controls></video>
+    <iframe class="main-video" src="./media/testmedia.mp4" frameborder="0"></iframe>
+    <!-- <video class="main-video" id="video" src="./media/testmedia.mp4" autoplay="autoplay" muted="autoplay" controls></video> -->
     <div class="v-list">
         <div class="v-items">
             <img src="./img/1.jpeg" class="v-item"></img>
@@ -50,7 +51,7 @@
             <h5 class="v-item-title">Leb 08 Lorem ipsum dolor sit..</h5>
         </div>
         <div class="v-items">
-            <img src="./img/3.jpeg" class="v-item"></img>
+            <img src="./img/1.jpeg" class="v-item"></img>
             <h5 class="v-item-title">Leb 09 Lorem, ipsum dolor.</h5>
         </div>
         <div class="v-items">
