--- a/video_page.html
+++ b/video_page.html
@@ -15,8 +15,7 @@
     </style>
 </head>
 <body>
-    <iframe class="main-video" src="./media/testmedia.mp4" frameborder="0"></iframe>
-    <!-- <video class="main-video" id="video" src="./media/testmedia.mp4" autoplay="autoplay" muted="autoplay" controls></video> -->
+    <video class="main-video" id="video" src="./media/testmedia.mp4" autoplay="autoplay" muted="autoplay" controls></video>
     <div class="v-list">
         <div class="v-items">
             <img src="./img/1.jpeg" class="v-item"></img>
